plugins/devkit/devkit-java-tests/testData/inspections/inspectionDescription/MyInspection.java
import com.intellij.codeInspection.InspectionProfileEntry;

public class <error descr="Inspection does not have a description">MyInspection</error> extends InspectionProfileEntry {}